# extension-examples

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  environment.yml  lerna.json  package.json  postBuild  tsconfig-base.json  tslint.json
1_hello_world/: .gitignore  README.md  package.json
2_commands_and_menus/: README.md  package-lock.json  package.json
3_widgets/: package-lock.json
3a_widgets/: package-lock.json  package.json
3b_datagrid/: README.md  package.json
4_datagrid/: package.json
4a_kernel_output/: README.md  package.json
4b_jupyterwidgets/: README.md  package-lock.json  package.json
5_kernel_output/: package-lock.json
5_outputareas/: package-lock.json  package.json
5_signals_and_buttons/: README.md  package.json
6_ipywidgets/: README.md  package-lock.json  package.json
6_kernel_messaging/: README.md  package.json
7_signals_and_buttons/: README.md
8_kernel_messages/: README.md  package-lock.json  package.json
cell-toolbar/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  install.json  package.json  pyproject.toml
clap-button-message/: .copier-answers.yml  .gitignore  .prettierignore  README.md  RELEASE.md  Untitled.ipynb  Untitled1.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  install.json  package.json  pyproject.toml
clap-button-message/clap_button/: __init__.py
clap-button-message/jupyterlab_examples_shout_button/: __init__.py
clap-button-message/src/: index.ts
clap-button-message/style/: base.css
clap-button-message/ui-tests/: package.json
clap-button-message/ui-tests/tests/: jupyterlab_examples_shout_button.spec.ts
clear_cell_outputs/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  install.json  package-lock.json  package.json  preview.mkv  pyproject.toml  setup.py
clear_cell_outputs/.github/workflows/: build.yml
clear_cell_outputs/src/: index.ts
codemirror-extension/: .copier-answers.yml  .gitignore  .prettierignore  README.md  install.json  package.json  (+1 more)
contentheader/: .copier-answers.yml  .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
contentheader/.github/workflows/: build.yml  check-release.yml
contentheader/jupyterlab_examples_contentheader/: __init__.py
contentheader/src/: index.ts
contentheader/style/: base.css
contentheader/ui-tests/: .env  README.md  package.json  playwright.config.ts
contentheader/ui-tests/tests/: contentheader.spec.ts
custom-log-console/: .copier-answers.yml  .gitignore  .prettierignore  README.md  RELEASE.md  package-lock.json  package.json  pyproject.toml  setup.py
custom-log-console/jupyterlab_examples_custom_log_console/: __init__.py
custom-log-console/schema/: plugin.json
custom-log-console/src/: index.ts  index.tsx  logLevelSwitcher.tsx
custom-log-console/ui-tests/: .env  README.md  jupyter_server_test_config.py  package.json
custom-log-console/ui-tests/tests/: custom-log-console.spec.ts
launcher/: .copier-answers.yml  .eslintrc.js  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
launcher/jupyterlab_examples_launcher/: __init__.py
launcher/schema/: plugin.json
launcher/src/: index.ts
launcher/style/: index.css
launcher/ui-tests/: .env  README.md  package.json
launcher/ui-tests/tests/: launcher.spec.ts
main-menu/: .copier-answers.yml  .eslintrc.js  .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
main-menu/jupyterlab_examples_main_menu/: __init__.py
main-menu/menus/: README.md  package.json
main-menu/schema/: plugin.json
main-menu/src/: index.ts
main-menu/ui-tests/: .env  README.md  package.json
main-menu/ui-tests/tests/: main-menu.spec.ts
react-widget/: .copier-answers.yml  .gitignore  .prettierignore  README.md  RELEASE.md  package-lock.json  package.json  pyproject.toml  setup.py
react-widget/jupyterlab_examples_react_widget/: __init__.py
react-widget/src/: index.ts  widget.tsx
react-widget/style/: base.css  index.css
react-widget/ui-tests/: .env  README.md  package.json
react-widget/ui-tests/tests/: react-widget.spec.ts
server-extension/: .copier-answers.yml  .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  conftest.py  install.json  package-lock.json  package.json  pyproject.toml  setup.py
server-extension/jlab_ext_example/: handlers.py
server-extension/jlab_ext_example/public/: index.html
server-extension/jupyter-config/: jlab_ext_example.json
server-extension/jupyter-config/nb-config/: jupyterlab_examples_server.json
server-extension/jupyter-config/server-config/: jupyterlab_examples_server.json
server-extension/jupyterlab_examples_server/: __init__.py  handlers.py
server-extension/jupyterlab_examples_server/public/: index.html
server-extension/jupyterlab_examples_server/tests/: __init__.py  test_handlers.py
server-extension/src/: handler.ts  index.ts
server-extension/ui-tests/: .env  README.md  package.json
server-extension/ui-tests/tests/: server-extension.spec.ts
settings/: .copier-answers.yml  .eslintrc.js  .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
settings/jupyterlab_examples_settings/: __init__.py
settings/schema/: plugin.json  settings-example.json
settings/src/: index.ts
settings/ui-tests/: .env  README.md  package.json
settings/ui-tests/tests/: settings.spec.ts
toolbar-button/: .copier-answers.yml  .eslintrc.js  .gitignore  .prettierignore  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
toolbar-button/jupyterlab_examples_toolbar_button/: __init__.py
toolbar-button/schema/: plugin.json
toolbar-button/src/: index.ts
toolbar-button/ui-tests/: .env  README.md  package.json
toolbar-button/ui-tests/tests/: toolbar-button.spec.ts
(+686 files in other folders)
