[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.0"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["clear_cell_outputs/labextension/static/style.js"]
ensured-targets = ["clear_cell_outputs/labextension/static/style.js", "clear_cell_outputs/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["clear_cell_outputs/labextension/**", "yarn.lock", ".*", "package-lock.json"]
