[build-system]
requires = [
    "hatchling",
    "jupyterlab~=3.1",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-examples-contentheader"
description = "Minimal JupyterLab example using contentHeader."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.6"
authors = [
    { name = "Project Jupyter Contributors", email = "" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = []
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/jupyterlab/extension-examples"

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_examples_contentheader/labextension/static" = "share/jupyter/labextensions/@jupyterlab-examples/contentheader/static"
"install.json" = "share/jupyter/labextensions/@jupyterlab-examples/contentheader/install.json"
"jupyterlab_examples_contentheader/labextension/package.json" = "share/jupyter/labextensions/@jupyterlab-examples/contentheader/package.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_examples_contentheader/labextension/static/style.js",
    "jupyterlab_examples_contentheader/labextension/package.json",
]
skip-if-exists = [
    "jupyterlab_examples_contentheader/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "jupyterlab_examples_contentheader/labextension"
source_dir = "src"
build_cmd = "install:extension"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

