[build-system]
requires = [
    "hatchling",
    "jupyterlab~=3.1",
]
build-backend = "hatchling.build"

[project]
name = "jlab-ext-example"
description = "A minimal JupyterLab extension with backend and frontend parts."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Project Jupyter Contributors", email = "" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
]
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "jupyter_server>=1.6,<2",
]
version = "0.1.0"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/jupyterlab/extension-examples"

[tool.hatch.build.targets.wheel.shared-data]
"jlab_ext_example/labextension/static" = "share/jupyter/labextensions/@jupyterlab-examples/server-extension/static"
"install.json" = "share/jupyter/labextensions/@jupyterlab-examples/server-extension/install.json"
"jlab_ext_example/labextension/package.json" = "share/jupyter/labextensions/@jupyterlab-examples/server-extension/package.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jlab_ext_example/labextension/static/style.js",
    "jlab_ext_example/labextension/package.json",
]
skip-if-exists = [
    "jlab_ext_example/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "jlab_ext_example/labextension"
source_dir = "src"
build_cmd = "install:extension"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

