[build-system]
requires = [
    "hatchling",
    "jupyterlab~=3.1",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-examples-toolbar-button"
description = "A JupyterLab extension for clearing all cells output at once."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.6"
authors = [
    { name = "Yash Singhal", email = "ramusinghal112@gmail.com" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
]
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = []
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/jupyterlab/extension-examples"

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_examples_toolbar_button/labextension/static" = "share/jupyter/labextensions/@jupyterlab-examples/toolbar-button/static"
"install.json" = "share/jupyter/labextensions/@jupyterlab-examples/toolbar-button/install.json"
"jupyterlab_examples_toolbar_button/labextension/package.json" = "share/jupyter/labextensions/@jupyterlab-examples/toolbar-button/package.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_examples_toolbar_button/labextension/static/style.js",
    "jupyterlab_examples_toolbar_button/labextension/package.json",
]
skip-if-exists = [
    "jupyterlab_examples_toolbar_button/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "jupyterlab_examples_toolbar_button/labextension"
source_dir = "src"
build_cmd = "install:extension"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

